[gd_scene load_steps=8 format=3 uid="uid://ds58up3640lfl"]

[ext_resource type="Texture2D" uid="uid://b3jc0iffget1v" path="res://sprites/DoorTemp.png" id="1_5m7ll"]
[ext_resource type="Script" path="res://scripts/door.gd" id="1_xk2qh"]
[ext_resource type="Texture2D" uid="uid://57umg06tgeoo" path="res://sprites/IconTilemap.png" id="3_wy3cx"]
[ext_resource type="Script" path="res://scripts/DoorButton.gd" id="3_x5wnp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqlvr"]
size = Vector2(16, 16)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_lrnwp"]
polygon = PackedVector2Array(-1, -8, 1, -8, 1, 8, -1, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idesg"]
size = Vector2(14, 14)

[node name="doors" type="Node2D"]
script = ExtResource("1_xk2qh")

[node name="door1" type="StaticBody2D" parent="."]
position = Vector2(0, 8)

[node name="d1" type="Sprite2D" parent="door1"]
texture = ExtResource("1_5m7ll")

[node name="CollisionShape2D" type="CollisionShape2D" parent="door1"]
shape = SubResource("RectangleShape2D_xqlvr")

[node name="LightOccluder2D" type="LightOccluder2D" parent="door1"]
occluder = SubResource("OccluderPolygon2D_lrnwp")

[node name="door2" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="d2" type="Sprite2D" parent="door2"]
texture = ExtResource("1_5m7ll")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="door2"]
shape = SubResource("RectangleShape2D_xqlvr")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="door2"]
occluder = SubResource("OccluderPolygon2D_lrnwp")

[node name="DoorButton1" type="Area2D" parent="."]
position = Vector2(2, 0)
script = ExtResource("3_x5wnp")

[node name="button1" type="Sprite2D" parent="DoorButton1"]
position = Vector2(-18, 0)
rotation = 1.5708
texture = ExtResource("3_wy3cx")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorButton1"]
position = Vector2(-18, 0)
shape = SubResource("RectangleShape2D_idesg")

[node name="DoorButton2" type="Area2D" parent="."]
position = Vector2(-2, 0)
rotation = 3.14159
script = ExtResource("3_x5wnp")

[node name="button1" type="Sprite2D" parent="DoorButton2"]
position = Vector2(-18, 0)
rotation = 1.5708
texture = ExtResource("3_wy3cx")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorButton2"]
position = Vector2(-18, 0)
shape = SubResource("RectangleShape2D_idesg")

[connection signal="input_event" from="DoorButton1" to="." method="_on_area_2d_input_event"]
[connection signal="input_event" from="DoorButton2" to="." method="_on_area_2d_input_event"]
